--- a/src/components/film-directory/film-directory.styles.scss
+++ b/src/components/film-directory/film-directory.styles.scss
@@ -20,3 +20,23 @@
         align-items: center;
     }
 }
+
+@media screen and (max-width:2220px){
+    .film-directory-container{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media screen and (max-width: 1650px){
+    .film-directory-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media screen and (max-width:1125px){
+    .film-directory-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+}
