--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -4,6 +4,8 @@
     height: 70px;
     width: 100%;
     margin-bottom: 25px;
+    font-family: 'Indie Flower', cursive;
+    font-size: 1.2rem;
 
     .nav-links-container{
       width: 50%;
@@ -15,6 +17,8 @@
       .nav-link{
         padding: 10px 15px;
         cursor: pointer;
+        font-size: 1.5rem;
+        font-weight: 700;
       }
     }
 }
