adding stylistic changes to the pages and finishig up the styling of the buttons, fonts, authorization pages

--- a/src/components/film-directory/film-directory.styles.scss
+++ b/src/components/film-directory/film-directory.styles.scss
@@ -3,17 +3,22 @@
     grid-template-columns: repeat(4,1fr);
     column-gap: 10px;
     row-gap: 50px;
+    
     h1{
         font-family: 'Concert One', cursive;
+        text-shadow: 5px 5px  #296E85;
     }
 }
 
 .film-directory-items{
     display: flex;
     flex-direction: column;
-
     .movie-banner{
         height: 300px;
+        box-sizing: border-box;
+        border-radius: 5%;
+        box-shadow: 10px 5px 5px #296E85;
+        margin-right: 5px;
         
     }
 
