--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -7,7 +7,15 @@
     }
 }
 
-.sign-button{
+.sign-button, .google-button{
     border: none;
     padding: 15px 32px;
+    margin-right: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    color: #fff;
+}
+
+.google-button{
+    background-color: blue;
 }
