--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -4,3 +4,17 @@
     justify-content: space-between;
     margin: 30px auto;
 }
+
+
+@media screen and (max-width:900px){
+    .authentication-container{
+        width: 720px
+    }
+}
+
+@media screen and (max-width:720px){
+    .authentication-container{
+        flex-direction: column;
+    }
+}
+
