--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -1,7 +1,8 @@
 @mixin shrinkLabel{
-    top: -14px;
-    font-size: 14px;
-    color: grey;
+    top: -28px;
+    font-size: 28px;
+    color: #fff;
+    font-weight: 700;
 }
 
 .group{
@@ -9,22 +10,23 @@
     margin: 45px 0;
     .form-input{
         background: none;
-        background-color: white;
-        color: grey;
-        font-size: 18px;
+        background-color: #ADD8E6;
+        color: #fff;
+        font-size: 1.2rem;
+        font-weight: 700;
         padding: 10px 10px 10px 5px;
         display: block;
         width: 100%;
         border: none;
         border-radius: 0;
-        border-bottom: 1px solid grey;
+        border-bottom: 1px solid #fff;
         margin: 25px 0;
         &:focus{outline: none;}
         &:focus ~ .form-input-label {@include shrinkLabel();}}
         input[type = password ]
         {letter-spacing: 0.3em;}
         .form-input-label{
-            color:grey;
+            color:#fff;
             font-size: 16px;
             font-weight: normal;
             position: absolute;
