--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -9,13 +9,22 @@
 
 .sign-button, .google-button{
     border: none;
+    border-radius: 5px;
     padding: 15px 32px;
     margin-right: 5px;
     cursor: pointer;
     font-size: 1rem;
     color: #fff;
+    font-weight: 700;
+    background-color: #296E85;
+    &:hover{
+        background-color: #338BA8;
+    }
 }
 
 .google-button{
-    background-color: blue;
+    background-color: #4285F4;
+    &:hover{
+        background-color: #5288d9;
+    }
 }
