fixed styling bugs for showpages

--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -3,6 +3,10 @@
     width: 900px;
     justify-content: space-between;
     margin: 30px auto;
+    font-family: 'Concert One', cursive;
+    h2{
+        text-shadow: 5px 5px 5px #296E85;
+    }
 }
 
 
