--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -9,9 +9,10 @@
     
     h2{
       color: #fff;
-      text-shadow: 5px 5px  #296E85;
+      text-shadow: 5px 5px #296E85;
     }
     .nav-links-container{
+      padding-top: 18px;
       width: 50%;
       height: 100%;
       display: flex;
