--- a/src/routes/authentication/authentication.styles.scss
+++ b/src/routes/authentication/authentication.styles.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;
     margin: 30px auto;
     font-family: 'Concert One', cursive;
+    font-size: 1.5rem;
     h2{
         text-shadow: 5px 5px 5px #296E85;
     }
@@ -19,6 +20,7 @@
 @media screen and (max-width:720px){
     .authentication-container{
         flex-direction: column;
+        font-size: 1.2rem;
     }
 }
 
