--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -10,6 +10,9 @@
     h2{
       color: #fff;
       text-shadow: 5px 5px #296E85;
+      &:hover{
+        color: #D4F1F4;
+      }
     }
     .nav-links-container{
       padding-top: 18px;
@@ -26,6 +29,9 @@
         cursor: pointer;
         font-size: 1.5rem;
         font-weight: 700;
+        &:hover{
+          color: #D4F1F4;
+        }
       }
     }
 }
