creating many components with react for the show page and refactoring code there. A bit more styling, and getting things to become a bit more responsive

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@ body{
     padding: 20px 40px;
     background-color: #ADD8E6;
     color: #fff;
+    font-family: 'Encode Sans Condensed', sans-serif;
  
 }
 
