--- a/src/components/film-details/film-details.styles.scss
+++ b/src/components/film-details/film-details.styles.scss
@@ -1,6 +1,6 @@
-.film-title{
-    // display: flex;
-    // justify-content: space-between;
-    // font-size: 1.5rem;
-
+.titles-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
