--- a/src/components/film-details/film-details.styles.scss
+++ b/src/components/film-details/film-details.styles.scss
@@ -4,3 +4,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.info-container{
+    display: flex;
+    justify-content: space-between;
+}
